tambah exclusions si sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,3 +13,6 @@ sonar.sources=.
  
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
+
+#khld: file yang dikecualikan
+sonar.exclusions=node_modules/**
