--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,3 +16,6 @@ sonar.sourceEncoding=UTF-8
 
 #khld: file yang dikecualikan
 sonar.exclusions=node_modules/**
+
+# manampilkan coverage
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
