--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 
 #khld: file yang dikecualikan
-sonar.exclusions=node_modules/**
+sonar.exclusions=node_modules/**, Dockerfile
 
 # manampilkan coverage
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
